--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" media="screen" href="javascripts/jqtouch/lib/jqtouch/jqtouch.css"/>
     <link type="text/css" rel="stylesheet" media="screen" href="javascripts/jqtouch/lib/themes/apple/theme.css"/>
 
-    <script src="http://maps.google.com/maps?file=api&amp;v=2.x&amp;key=ABQIAAAAzr2EBOXUKnm_jVnk0OJI7xSosDVG8KKPE1-m51RBrvYughuyMxQ-i1QfUnH94QxWIa6N4U6MouMmBA" type="text/javascript"></script>
+    <script src="http://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
 
     <!-- JavaScript goes here -->
     <script type="text/javascript">
